<resources>
    <string name="app_name">ScenariosGames</string>
    <string name="title_activity_sign_up" />
    <string name="default_web_client_id" />
    <string name="facebook_app_id">231708665868950</string>
    <string name="facebook_client_token">f45a596cb8e2e746c8c20cdb32bf0cf4</string>
    <string name="fb_login_protocol_scheme"></string>
    <string name="title_activity_jeu">Jeu</string>
    <string name="title_activity_download_games_content">DownloadGamesContent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page">Home page</string>
    <string name="start_game">Start game</string>
    <string name="enter_your_secret_code">Enter your secret code</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_agree_with_terms_and_privacy">I agree with terms and Privacy</string>
    <string name="scenarios">Scenarios</string>
    <string name="arrow">arrow</string>
    <string name="publish_scenarios">Publish Scenarios</string>
    <string name="todo">TODO</string>
    <string name="img">TODO</string>
    <string name="_1_hr">1 hr</string>
    <string name="__1_hr">1 hr</string>
    <string name="___1_hr">1 hr</string>
    <string name="_img">TODO</string>
    <string name="__img">TODO</string>
    <string name="__imag">TODO</string>
    <string name="imga">TODO</string>
    <string name="img_">TODO</string>
    <string name="img__">TODO</string>
    <string name="__img_">TODO</string>
    <string name="__image">TODO</string>
    <string name="___todo">TODO</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_download_content">DownloadContentActivity</string>
    <string name="title_activity_create_scenarios_game">CreateScenariosGame</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="Photo">photo</string>
    <string name="newyork">newyork\n</string>
    <string name="arrow_">arrow</string>
    <string name="how_does_it_work">How does it work?</string>
    <string name="confidentiality">Confidentiality</string>
    <string name="read_tos">Read TOS</string>
    <string name="about_us">About Us</string>
    <string name="image">image\n</string>
    <string name="share">Share</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_a_fermentm_faucibus_netus_morbi_nisl_varius_turpis_purus_eget_vol_amet_mi_laoreet_rhoncus">Lorem ipsum dolor sit amet consectetur. A fermentm faucibus netus morbi nisl varius turpis. Purus eget vol amet mi laoreet rhoncus</string>
    <string name="read_more">Read More</string>
    <string name="finshed_game">Finshed Game</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="status_bar_content">Status Bar Content</string>
    <string name="jack_farst">Jack Farst</string>
    <string name="Arrowback">"arrow back "</string>
    <string name="ProfileImage">ProfileImage</string>
    <string name="imageofnewyork">imageofnewyork</string>
    <string name="the_tuilries_quest">The Tuilries Quest</string>
    <string name="up_level">Up Level</string>
    <string name="android_5_0_minimum">Android 5.0 minimum</string>
    <string name="title_activity_explore_game">ExploreGame</string>
    <string name="imageview">imageview</string>
    <string name="imageview__">TODO</string>
    <string name="imageview2">imageview</string>
    <string name="anima_agent_ludique">Anima Agent Ludique</string>
    <string name="_the_tuilries_quest">The Tuilries Quest</string>
    <string name="imageview_">imageview\n</string>
    <string name="imageview___">imageview</string>
    <string name="image3">imageview\n</string>
    <string name="image_view">imageview\n</string>
    <string name="upload_videos">Upload videos</string>
    <string name="todoè">TODO</string>
    <string name="todovf">TODO</string>
    <string name="ccccc">TODO</string>
    <string name="ccccccc">TODO</string>
    <string name="vvvvvv">TODO</string>
    <string name="vvvvvvv">TODO</string>
    <string name="location">Location</string>
    <string name="vvvvvvvv">TODO</string>
    <string name="vvvvv">Paris</string>
    <string name="audio_recording">Audio recording</string>
    <string name="imageview12">imageview12</string>
    <string name="imageview24">imageview</string>
    <string name="home">Home</string>
    <string name="exploregame">ExploreGame</string>
    <string name="profileview">profile</string>
    <string name="down">Down</string>
    <string name="mike">mike\n</string>
    <string name="Amir">AMir\n</string>
    <string name="amir">Amir</string>
    <string name="Mike">Mike</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="next">next</string>
    <string name="explore_guest">explore guest</string>
    <string name="_90_min">90 min</string>
    <string name="__profile">Profile</string>
    <string name="save">Save</string>
    <string name="profile__">Profile</string>
    <string name="viewimage">TODO</string>
    <string name="username">username</string>
    <string name="username_">username</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="state">State</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="city">City</string>
    <string name="profile_">TODO</string>
    <string name="_profile">profile</string>
    <string name="game">game</string>
    <string name="gamedetail">gamedetail</string>
    <string name="item">Item</string>
    <string name="scenarioscreate">scenarios</string>
    <string name="editprofile">editprofile</string>
    <string name="scenariosdetails">scenariosdetails</string>
    <string name="main">main</string>
    <string name="ali">Ali</string>
    <string name="hamadi">Hamadi</string>

</resources>