<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:title="@string/main"
            app:showAsAction="always"
            android:id="@+id/main" />
    <item
            android:title="@string/home"
            android:id="@+id/Home"
            android:checkable="false"
            app:showAsAction="ifRoom" />
    <item
            android:title="@string/game"
            app:showAsAction="ifRoom"
            android:id="@+id/game" />
    <item
            android:title="@string/gamedetail"
            app:showAsAction="ifRoom"
            android:id="@+id/gamedetail" />
    <item
            android:title="@string/scenarioscreate"
            app:showAsAction="ifRoom"
            android:id="@+id/scenarioscreate" />
    <item
            android:title="@string/profileview"
            android:id="@+id/Profile"
            app:showAsAction="ifRoom" />
    <item
            android:title="@string/editprofile"
            android:id="@+id/editprofile" />
    <item
            android:title="@string/scenariosdetails"
            android:id="@+id/scenariosdetails" />
</menu>