<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view8"
        android:layout_width="198dp"
        android:layout_height="2dp"
        android:layout_marginBottom="620dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="229dp"
        android:background="@color/transparent"
        android:gravity="center"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/view8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnknownIdInLayout">

        <!-- Add status bar content here, e.g., text, icons, etc. -->
        <TextView
            android:id="@+id/statusbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_bar_content"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/Profile"
        android:layout_width="82dp"
        android:layout_height="33dp"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="772dp"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/JackFarst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginBottom="716dp"
        android:text="@string/jack_farst"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Editprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginBottom="644dp"
        android:text="@string/edit_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/arrowback"
        android:layout_width="18dp"
        android:layout_height="31dp"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="774dp"
        android:contentDescription="@string/Arrowback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/navigation_back_arrow_svgrepo_com"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/finshedgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="580dp"
        android:text="@string/finshed_game"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="372dp"
        android:layout_height="213dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="336dp"
        android:contentDescription="@string/imageview_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/view_photo_foreground" />

    <TextView
        android:id="@+id/TheTuilriesQuest"
        android:layout_width="140dp"
        android:layout_height="23dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="9dp"
        android:text="@string/_the_tuilries_quest"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/AnimaAgentLudique1"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/AnimaAgentLudique1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="260dp"
        android:text="@string/anima_agent_ludique"
        android:textColor="#150000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="111dp"
        android:layout_height="22dp"
        android:contentDescription="@string/imageview___"
        app:srcCompat="@drawable/arrow_forward_icon"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="242dp"
        tools:layout_editor_absoluteY="587dp" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="598dp"
        android:layout_height="415dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/image3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AnimaAgentLudique1"
        app:srcCompat="@mipmap/image_photo_round"
        tools:ignore="MissingConstraints,VisualLintBounds" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="69dp"
        app:layout_constraintBottom_toTopOf="@+id/finshedgame"
        app:layout_constraintEnd_toStartOf="@+id/JackFarst"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/viewim_photo_round" />


</androidx.constraintlayout.widget.ConstraintLayout>