<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    <!-- Status Bar -->

    <LinearLayout
            android:id="@+id/statusbar1"
            android:layout_width="391dp"
            android:layout_height="40dp"
            android:background="@color/transparent"
            android:gravity="center"
            android:padding="40dp"
            tools:ignore="MissingConstraints,UselessParent,VisualLintBounds">

        <!-- Add status bar content here, e.g., text, icons, etc. -->

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="Status Bar Content"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:visibility="visible"
                tools:ignore="HardcodedText,TextContrastCheck,VisualLintBounds"
                tools:visibility="visible" />
    </LinearLayout>

    <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Location"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="HardcodedText,MissingConstraints,VisualLintBounds,VisualLintOverlap"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="65dp" />

    <TextView
            android:id="@+id/paris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Paris"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="HardcodedText,MissingConstraints,VisualLintBounds,VisualLintOverlap"
            tools:layout_editor_absoluteY="97dp"
            tools:layout_editor_absoluteX="155dp" />

    <TextView
            android:id="@+id/Howdoesitwork"
            android:layout_width="194dp"
            android:layout_height="35dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/how_does_it_work"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/arrow_forward_icon"
            tools:ignore="TextSizeCheck,VisualLintOverlap"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="87dp"
            android:layout_marginBottom="34dp"
            app:layout_constraintBottom_toTopOf="@+id/share" />

    <Button
            android:id="@+id/share"
            android:layout_width="88dp"
            android:layout_height="55dp"
            android:background="@drawable/roundshapebtn"
            android:text="@string/share"
            tools:ignore="TextContrastCheck"
            android:layout_marginBottom="52dp"
            app:layout_constraintBottom_toTopOf="@+id/aboutus"
            app:layout_constraintEnd_toStartOf="@+id/ReadTOS"
            android:layout_marginEnd="32dp" />

    <Button
            android:id="@+id/ReadTOS"
            android:layout_width="99dp"
            android:layout_height="54dp"
            android:background="@drawable/roundshapebtn"
            android:text="@string/read_tos"
            tools:ignore="TextContrastCheck"
            android:layout_marginBottom="92dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/Confidentiality"
            android:layout_marginEnd="28dp" />

    <Button
            android:id="@+id/Confidentiality"
            android:layout_width="132dp"
            android:layout_height="54dp"
            android:background="@drawable/roundshapebtn"
            android:text="@string/confidentiality"
            tools:ignore="TextSizeCheck,TextContrastCheck"
            android:layout_marginBottom="95dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/aboutus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            android:layout_marginEnd="284dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/textView4"
            android:layout_width="336dp"
            android:layout_height="98dp"
            android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_a_fermentm_faucibus_netus_morbi_nisl_varius_turpis_purus_eget_vol_amet_mi_laoreet_rhoncus"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic"
            tools:ignore="TextSizeCheck"
            android:layout_marginEnd="41dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/readmore" />

    <TextView
            android:id="@+id/readmore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_more"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="69dp"
            android:layout_marginEnd="300dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
            android:id="@+id/newyork"
            android:layout_width="367dp"
            android:layout_height="200dp"
            android:contentDescription="@string/imageview__"
            app:srcCompat="@mipmap/_photo_foreground"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/Howdoesitwork"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" />

    <ImageView
            android:id="@+id/profile"
            android:layout_width="104dp"
            android:layout_height="82dp"
            app:srcCompat="@mipmap/viewim_photo_foreground"
            android:contentDescription="@string/imageview12"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/newyork"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <Button
            android:layout_width="66dp"
            android:layout_height="48dp"
            android:id="@+id/arrowforward"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/Howdoesitwork"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/Confidentiality"
            android:background="@color/transparent"
            android:drawableStart="@drawable/arrow_forward_icon"
            tools:ignore="SpeakableTextPresentCheck" />

    <Button
            android:layout_width="110dp"
            android:layout_height="49dp"
            android:id="@+id/arrowforward_"
            android:layout_marginStart="26dp"
            app:layout_constraintStart_toEndOf="@+id/readmore"
            android:layout_marginEnd="191dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="56dp"
            tools:ignore="SpeakableTextPresentCheck"
            android:background="@color/transparent"
            app:layout_constraintHorizontal_bias="0.0"
            android:drawableStart="@drawable/arrow_forward_icon" />

    <Button
            android:layout_width="52dp"
            android:layout_height="55dp"
            android:id="@+id/menu_"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/statusbar1"
            android:background="@color/transparent"
            tools:ignore="SpeakableTextPresentCheck"
            android:drawableStart="@drawable/menu_svgrepo_com" />

    <Button
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/updown_"
            android:layout_marginBottom="56dp"
            app:layout_constraintBottom_toTopOf="@+id/newyork"
            app:layout_constraintEnd_toStartOf="@+id/profile"
            android:layout_marginEnd="44dp"
            android:background="@drawable/back_up_down_svgrepo_com"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>