<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <!-- Status Bar -->

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="431dp"
            android:layout_height="43dp"
            android:background="@color/transparent"
            android:gravity="center"
            android:padding="8dp"
            android:orientation="horizontal"
            android:layout_marginBottom="69dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

    </LinearLayout>

    <TextView
            android:id="@+id/textViewEnterCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_secret_code"
            android:textColor="@color/FireBrick"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            android:layout_marginBottom="86dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/startgame"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:id="@+id/startgame"
            android:layout_width="159dp"
            android:layout_height="55dp"

            android:background="@drawable/roundshapebtn"
            android:clickable="true"
            android:drawableEnd="@drawable/forward_arrow"
            android:focusable="true"
            android:fontFamily="sans-serif"
            android:text="@string/start_game"
            android:textAppearance="@style/CardView.Dark"
            android:textColor="#EDE7F6"
            android:textSize="16sp"
            tools:ignore="MissingConstraints"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/textViewEnterCode"
            android:layout_marginBottom="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/home"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:id="@+id/home"
            android:layout_width="155dp"
            android:layout_height="60dp"
            android:background="@drawable/roundshapebtn"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/home_page"
            android:textAppearance="@style/CardView.Dark"
            android:textColor="#EDE7F6"
            android:textSize="16sp"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/startgame"
            android:layout_marginBottom="183dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.501" />

    <ImageView
            android:id="@+id/logo"
            android:layout_width="347dp"
            android:layout_height="267dp"
            android:importantForAccessibility="no"
            app:srcCompat="@mipmap/game_foreground"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:layout_marginBottom="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textViewEnterCode"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:layout_width="141dp"
            android:layout_height="48dp"
            android:id="@+id/buttonvide"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/startgame"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="116dp"
            android:background="@drawable/rectangleshape"
            tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>